<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity"
    android:background="@color/primario">

    <ImageButton
        android:id="@+id/botonCerrarSesion"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/primario"
        android:contentDescription="@string/botonCerrarSesion"
        android:src="@mipmap/cerrar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/botonNotas"
        android:layout_width="254dp"
        android:layout_height="80dp"
        android:textSize="25sp"
        android:backgroundTint="@color/secundario"
        android:text="@string/botonIrANotas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/botonAjustes"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/secundario"
        android:contentDescription="@string/botonIrAAjustes"
        android:src="@mipmap/ajustes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/botonCalendario"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/secundario"
        android:contentDescription="@string/botonIrACalendario"
        android:src="@mipmap/calendario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/menuInferior"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:background="@color/secundario">

        <ImageButton
            android:id="@+id/botonEstadistica"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/botonIrAEstadistica"
            android:src="@mipmap/estadistica"
            android:backgroundTint="@color/secundario"
            android:scaleType="centerInside" />


        <ImageButton
            android:id="@+id/botonPrincipal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/botonIrAPrincipal"
            android:src="@mipmap/casa"
            android:backgroundTint="@color/secundario"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/botonVolver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/botonVolver"
            android:src="@mipmap/volver"
            android:backgroundTint="@color/secundario"
            android:scaleType="centerInside"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>