<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/primario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotasActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/fotoNotas"
        android:src="@drawable/Lapicero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintHorizontal_bias="0.50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloNotas"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:fontFamily="@font/fuente_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"/>

    <ImageView
        android:id="@+id/imagenNota"
        android:layout_width="200pt"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fondoNotas"
        android:src="@drawable/Notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.70"
        app:layout_constraintHorizontal_bias="0.80"/>

    <EditText
        android:layout_width="210dp"
        android:layout_height="250dp"
        android:gravity="center"
        android:hint="@string/textNotas"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="@font/fuente_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60"/>


    <ImageButton
        android:id="@+id/TextView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/fotoCalendario"
        android:scaleType="centerInside"
        android:src="@mipmap/bueno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />


</androidx.constraintlayout.widget.ConstraintLayout>